tweak threading pool